objects/Blood_Request__c.object
<CustomObject>
    <label>Blood Request</label>
    <nameField>
        <displayFormat>BR-{000}</displayFormat>
        <label>Blood Request Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Blood Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Countries</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <label>District</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>State__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Districts</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Blood_Group__c</fullName>
        <label>Blood Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Blood_Group</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_Of_Units__c</fullName>
        <label>No Of Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Patient_Age__c</fullName>
        <label>Patient Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Patient_Name__c</fullName>
        <label>Patient Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attender_Name__c</fullName>
        <label>Attender Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hospital_Name__c</fullName>
        <label>Hospital Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attender_Email__c</fullName>
        <label>Attender Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Hospital_Address__c</fullName>
        <label>Hospital Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Nature_Of_Treatment__c</fullName>
        <label>Nature Of Treatment</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attender_Contact_Number__c</fullName>
        <label>Attender Contact Number</label>
        <type>Phone</type>
    </fields>
    <validationRules>
        <fullName>AttenderName</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK( Attender_Name__c )),ISBLANK( Attender_Contact_Number__c ))</errorConditionFormula>
        <errorMessage>attender contact number shoud not be blank when attender is present</errorMessage>
    </validationRules>
</CustomObject>